# cuspatial

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE_PROJ  README.md  build.sh  dependencies.yaml  fetch_rapids.cmake  print_env.sh  pyproject.toml  rapids_config.cmake  setup.cfg
cpp/: .clang-format  .clangd  CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt  floating_point_equality.cu  hausdorff_benchmark.cpp  pairwise_linestring_distance.cu  pairwise_point_polygon_distance.cu  point_in_polygon.cu  points_in_range.cu  polygon_distance_benchmark.cpp  quadtree_on_points.cu  spatial_window.cu
cpp/benchmarks/distance/: hausdorff_benchmark.cpp  pairwise_linestring_distance.cu  pairwise_linestring_polygon_distance.cu  pairwise_point_polygon_distance.cu
cpp/benchmarks/fixture/: benchmark_fixture.hpp  rmm_pool_raii.hpp
cpp/benchmarks/indexing/: quadtree_on_points.cu
cpp/benchmarks/point_in_polygon/: point_in_polygon.cu
cpp/benchmarks/points_in_range/: points_in_range.cu
cpp/benchmarks/synchronization/: synchronization.cpp  synchronization.hpp
cpp/benchmarks/test/: test_benchmark.cpp
cpp/benchmarks/utility/: floating_point_equality.cu  random.cuh
cpp/cmake/: EvalGpuArchs.cmake  config.json  cuspatial-build-config.cmake.in  cuspatial-config.cmake.in
cpp/cmake/Modules/: ConfigureCUDA.cmake  EvalGPUArchs.cmake  SetGPUArchs.cmake
cpp/cmake/Templates/: GoogleBenchmark.CMakeLists.txt.cmake  GoogleTest.CMakeLists.txt.cmake
cpp/cuproj/: CMakeLists.txt  README.md
cpp/cuproj/benchmarks/: CMakeLists.txt  wgs_to_utm_bench.cu
cpp/cuproj/doxygen/: Doxyfile  Doxyfile.bak  DoxygenLayout.xml  main_page.md
cpp/cuproj/include/: doxygen_groups.h
cpp/cuproj/tests/: CMakeLists.txt  test.cu  wgs_to_utm_test.cu
cpp/doc/: BENCHMARKING.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  TESTING.md  libcuspatial_refactoring_guide.md
cpp/doxygen/: Doxyfile  DoxygenLayout.xml  main_page.md  rapids.css
cpp/doxygen/developer_guide/: BENCHMARKING.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  HEADER_ONLY_API_GUIDE.md  REFACTORING_GUIDE.md  TESTING.md
cpp/include/: doxygen_groups.h  shapefile_readers.hpp
cpp/include/cuspatial/: allpairs_multipoint_equals_count.hpp  assert.cuh  bounding_box.hpp  bounding_boxes.cuh  bounding_boxes.hpp  constants.hpp  coor_trans.hpp  coord_trans.hpp  coordinate_transform.hpp  cubic_spline.hpp  cubicspline.hpp  cuda_utils.hpp  cusparse_error.hpp  cuspatial.h  distance.cuh  distance.hpp  error.hpp  hausdorff.cuh  hausdorff.hpp  haversine.cuh  haversine.hpp  indexing.hpp  intersection.cuh  intersection.hpp  iterator_factory.cuh  linestring_bounding_box.hpp  linestring_distance.cuh  linestring_intersection.hpp  nearest_points.hpp  pairwise_multipoint_equals_count.cuh  pairwise_multipoint_equals_count.hpp  pairwise_point_in_polygon.hpp  pip.hpp  pip2.hpp  pip_util.h  point_distance.cuh  point_in_polygon.cuh  point_in_polygon.hpp  point_in_polygon_one_to_one.hpp  point_linestring_nearest_point.hpp  (+38 more)
cpp/include/cuspatial_test/: base_fixture.hpp  column_factories.hpp  geometry_fixtures.hpp  geometry_generator.cuh  random.cuh  test_util.cuh  vector_equality.hpp  vector_factories.cuh
cpp/include/legacy/: soa_readers.hpp
cpp/scripts/: run-clang-format.py  run-cmake-format.sh
cpp/src/bounding_boxes/: linestring_bounding_boxes.cu  polygon_bounding_boxes.cu
cpp/src/column/: geometry_column_view.cu  mixed_geometry_column_view.cpp
cpp/src/distance/: hausdorff.cu  haversine.cu  linestring_distance.cu  linestring_polygon_distance.cu  point_distance.cu  point_linestring_distance.cu  point_polygon_distance.cu  polygon_distance.cu
cpp/src/equality/: pairwise_multipoint_equals_count.cu
cpp/src/include/: st_query_thrust.cuh  trajectory_thrust.cuh
cpp/src/indexing/: point_quadtree.cu  point_quadtree2.cu  quadtree.cu  quadtree_not_working.cu
cpp/src/interpolate/: cubic_spline.cu  cubicspline.cu
cpp/src/intersection/: linestring_intersection.cu
cpp/src/join/: p2p_nn_refine.cu  pip_refine.cu  quadtree_bbox_filtering.cu  quadtree_point_in_polygon.cu  quadtree_point_to_nearest_linestring.cu  quadtree_point_to_nearest_polyline.cu  quadtree_poly_filtering.cu  quadtree_poly_filtering2.cu  quadtree_polygon.cu  quadtree_polygon_filtering.cu
cpp/src/nearest_points/: point_linestring_nearest_points.cu
cpp/src/point_in_polygon/: point_in_polygon.cu
cpp/src/points_in_range/: points_in_range.cu
cpp/src/projection/: sinusoidal_projection.cu
cpp/src/query/: spatial_window.cu  spatial_window_points.cu
cpp/src/shared/: shared_util.cpp
cpp/src/spatial/: allpairs_multipoint_equals_count.cu  allpairs_point_equals_count.cu  bounding_box.cu  byte_point_in_polygon.cu  columnar_point_in_polygon.cu  distances_utilities.cuh  hausdorff.cu  haversine.cu  linestring_bounding_box.cu  linestring_bounding_boxes.cu  linestring_distance.cu  linestring_intersection.cu  linestring_polygon_distance.cu  ll2coor.cu  lonlat_to_cartesian.cu  lonlat_to_coord.cu  lonlat_to_coordinate.cu  pairwise_multipoint_equals_count.cu  pairwise_point_in_polygon.cu  pip.cu  pip2.cu  point_distance.cu  point_in_polygon.cu  point_in_polygon_one_to_one.cu  point_linestring_distance.cu  point_linestring_nearest_point.cu  point_linestring_nearest_points.cu  point_polygon_distance.cu  polygon_bounding_box.cu  polygon_bounding_boxes.cu  polygon_distance.cu  polygon_separation.cu  polyline_bounding_box.cu  sinusoidal_projection.cu
cpp/src/spatial_window/: spatial_window.cu
cpp/src/st_query/: spatial_window_point.cu  sw_xy.cu
cpp/src/stq/: sw_xy.cu
cpp/src/traj/: coor2traj.cu  ll2coor.cu  traj_distspeed.cu  traj_sbbox.cu  traj_util.cpp
cpp/src/trajectory/: compute_bounding_boxes.cu  compute_distance_and_speed.cu  (+15 more)
cpp/tests/: CMakeLists.txt  base_fixture.hpp  column_factory.cpp  test_common.cpp
python/cuproj/: .coveragerc  CMakeLists.txt  README.md  pyproject.toml  setup.py
python/cuspatial/: .coveragerc  CMakeLists.txt  pyproject.toml  record.txt  setup.cfg  setup.py  versioneer.py
python/libcuspatial/: CMakeLists.txt  pyproject.toml
(+1147 files in other folders)
